# rust

./: Cargo.toml  template.env
migrations/: 20240831092642_links.down.sql  20240831092642_links.up.sql  20240831114401_link_statistics.down.sql  20240831114401_link_statistics.up.sql  20240901072322_settings.down.sql  20240901072322_settings.up.sql
src/: auth.rs  main.rs  routes.rs  utils.rs
