[package]
name = "shortner"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
axum-prometheus = "0.7.0"
base64 = "0.22.1"
dotenvy = "0.15.7"
metrics = "0.23.0"
metrics-exporter-prometheus = "0.15.3"
rand = "0.8.5"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
sqlx = { version = "0.8.1", features = ["runtime-tokio-rustls", "postgres"] }
tokio = { version = "1.40.0", features = ["full"] }
tower = "0.5.0"
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = "2.5.2"
